# my_beginner_tutorials

./: .clang-tidy  .gitignore  README.md
.cache/clangd/index/: simple_publisher.cpp.EFFEF474EB0EE04F.idx  simple_publisher.hpp.70913A1590F8DD6E.idx  simple_subscriber.cpp.42B3225849523651.idx  simple_subscriber.hpp.1234BA0A61CF5628.idx
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/Results/: frames_2024-11-15_15.46.26.gv
src/beginner_tutorials/include/: simple_publisher.hpp  simple_subscriber.hpp
src/beginner_tutorials/launch/: bag.launch.py  test_service.launch.yaml  tutorial_launch.py
src/beginner_tutorials/src/: main.cpp  simple_publisher.cpp  simple_subscriber.cpp
src/beginner_tutorials/test/: integration_test.cpp
